<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/acitivity_main_nonogram"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="215dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_check_lvl"
            android:textColor="@color/black"
            android:textSize="25sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_lvl1"
                    android:onClick="onClickBtn_lvl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:maxWidth="150dp"
                    android:maxHeight="150dp"
                    android:minWidth="150dp"
                    android:minHeight="150dp"
                    android:text="@string/activity_main_lvl1"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_lvl2"
                    android:onClick="onClickBtn_lvl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:maxWidth="150dp"
                    android:maxHeight="150dp"
                    android:minWidth="150dp"
                    android:minHeight="150dp"
                    android:text="@string/activity_main_lvl2"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_lvl3"
                    android:onClick="onClickBtn_lvl3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:maxWidth="150dp"
                    android:maxHeight="150dp"
                    android:minWidth="150dp"
                    android:minHeight="150dp"
                    android:text="@string/activity_main_lvl_3"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/btn_lvl4"
                    android:onClick="onClickBtn_lvl4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:maxWidth="150dp"
                    android:maxHeight="150dp"
                    android:minWidth="150dp"
                    android:minHeight="150dp"
                    android:text="@string/activity_main_lvl4"
                    tools:ignore="ButtonStyle"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>